Added fused_concat_linear to make sw (commented out)

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -3,6 +3,7 @@
         "flashattention_2_fp16.h": "c",
         "dnn.h": "c",
         "data.h": "c",
-        "blas.h": "c"
+        "blas.h": "c",
+        "fused_concat_linear.h": "c"
     }
 }
